--- a/index.html
+++ b/index.html
@@ -11,31 +11,38 @@
 <body>
     <header>
         <div class="header-bg contenedor">
-            <div class="nav-grid">
-                <div class="logo">
-                    <a href="index.html">
-                        <img src="assets/img/libro.png" alt="Logo del blog">
-                    </a>
+            <div class="contenido-header">
+                <div class="nav-grid">
+                    <div class="logo">
+                        <a href="index.html">
+                            <img src="assets/img/libro.png" alt="Logo del blog">
+                        </a>
+                    </div>
+
+                    <nav>
+                        <a href="index.html">Home</a>
+                        <a href="#">Sobre mí</a>
+                        <a href="#">Contacto</a>
+                    </nav>
                 </div>
-                <nav>
-                    <a href="index.html">Home</a>
-                    <a href="about.html">Sobre mí</a>
-                    <a href="contact.html">Contacto</a>
-                </nav>
-            </div>
-            <div class="titulo-blog">
-                <h1>Lecturas de Natalia</h1>
-                <p>Reseñas sobre libros que he leído</p>
-                <div class="redes-sociales">
-                    <a href="https://github.com/Nataliaguemez" target="_blank">
-                        <img src="assets/img/github.png" alt="GitHub">
-                    </a>
-                    <a href="https://www.linkedin.com/in/natalia-g%C3%BCemez-51860228b/" target="_blank">
-                        <img src="assets/img/linkedin.png" alt="Linkedin">
-                    </a>
-                    <a href="https://open.spotify.com/user/tjtro6qso9psmkuxky7amtu66?si=3bdbccdeef3a4664" target="_blank">
-                        <img src="assets/img/spotify.png" alt="Spotify">
-                    </a>
+
+                <div class="contenido-hero">
+                    <div class="titulo-blog">
+                        <h1>Lecturas de Natalia</h1>
+                        <p>Reseñas sobre libros que he leído</p>
+                    </div>
+
+                    <div class="redes-sociales">
+                            <a href="https://github.com/Nataliaguemez" target="_blank">
+                                <img src="assets/img/github.png" alt="GitHub">
+                            </a>
+                            <a href="https://www.linkedin.com/in/natalia-g%C3%BCemez-51860228b/" target="_blank">
+                                <img src="assets/img/linkedin.png" alt="Linkedin">
+                            </a>
+                            <a href="https://open.spotify.com/user/tjtro6qso9psmkuxky7amtu66?si=3bdbccdeef3a4664" target="_blank">
+                                <img src="assets/img/spotify.png" alt="Spotify">
+                            </a>
+                    </div>                
                 </div>
             </div>
         </div>
@@ -55,18 +62,19 @@
         </div>
         
         <aside class="sidebar">
-            <h2>Acerca de mi</h2>
+            <h3>Acerca de mi</h3>
             <img src="assets/img/foto-perfil.jpg" alt="Foto de Natalia" class="foto-perfil">
             <p>Natalia Güemez</p>
-            <p>Instagram principal @natfpuffs</p>
-            <p>Instagram secundario @...</p>
+            <p>Instagram principal 
+                <a href="https://www.instagram.com/nattpuffs/" target="_blank">@nattpuffs</a>
+            </p>
 
-            <h2>Linkedin</h2>
+            <h3>Linkedin</h3>
             <div class="badge-base LI-profile-badge" data-locale="es_ES" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="natalia-güemez-51860228b" data-version="v1">
                 <a class="badge-base__link LI-simple-link" href="https://mx.linkedin.com/in/natalia-g%C3%BCemez-51860228b?trk=profile-badge"></a>
             </div>
 
-            <h2>Mi canción favorita</h2>
+            <h3>Mi playlist favorita</h3>
             <div class="spotifywrapper">
                 <style>
                     .spotifywrapper{position:relative}.spotifywrapper iframe{border:0;position:relative;z-index:2}.spotifywrapper a{color:rgba(0,0,0,0);position:absolute;left:0;top:0;z-index:0}
@@ -78,7 +86,20 @@
             </div>
         </aside>
     </main>
-    <footer>Pie de página</footer>
+    <footer>
+        <div class="redes-sociales">
+                    <a href="https://github.com/Nataliaguemez" target="_blank">
+                        <img src="assets/img/github.png" alt="GitHub">
+                    </a>
+                    <a href="https://www.linkedin.com/in/natalia-g%C3%BCemez-51860228b/" target="_blank">
+                        <img src="assets/img/linkedin.png" alt="Linkedin">
+                    </a>
+                    <a href="https://open.spotify.com/user/tjtro6qso9psmkuxky7amtu66?si=3bdbccdeef3a4664" target="_blank">
+                        <img src="assets/img/spotify.png" alt="Spotify">
+                    </a>
+        </div>
+        <p>Copyright © Natalia Güemez ❤️ Blog 2025</p>
+    </footer>
     <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </body>
 </html>
