Arreglar responsive y widget de spotify

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div class="header-bg contenedor">
+        <div class="header-bg">
             <div class="contenido-header">
                 <div class="nav-grid">
                     <div class="logo">
@@ -26,7 +26,7 @@
                     </nav>
                 </div>
 
-                <div class="contenido-hero">
+                <div class="descripcion-blog">
                     <div class="titulo-blog">
                         <h1>Lecturas de Natalia</h1>
                         <p>Reseñas sobre libros que he leído</p>
@@ -75,15 +75,8 @@
             </div>
 
             <h3>Mi playlist favorita</h3>
-            <div class="spotifywrapper">
-                <style>
-                    .spotifywrapper{position:relative}.spotifywrapper iframe{border:0;position:relative;z-index:2}.spotifywrapper a{color:rgba(0,0,0,0);position:absolute;left:0;top:0;z-index:0}
-                </style>
-                <a href="https://www.fluxaiimagegenerator.net">
-                    flux ai image generator
-                </a>
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/7Lv6VzSqIz1sAssK2JUskG?utm_source=generator&theme=0" width="252" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-            </div>
+            <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/64ArPiQXwY1qmATIvfVEud?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            
         </aside>
     </main>
     <footer>
