Completar plantillas del blog

--- a/acerca.html
+++ b/acerca.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lecturas de Natalia</title>
+    <title>Sobre mi</title>
     <meta name="description" content="Blog de lecturas de Natalia">
-    <link rel="preload" href="assets/css/style.css" as="style">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" type="image/x-icon" href="assets/img/libro.png">
 </head>
@@ -22,15 +21,15 @@
 
                     <nav>
                         <a href="index.html">Home</a>
-                        <a href="acerca.html">Sobre mí</a>
-                        <a href="mailto:nataliaguemez@example.com">Contacto</a>
+                        <a href="#">Sobre mí</a>
+                        <a href="#">Contacto</a>
                     </nav>
                 </div>
 
                 <div class="descripcion-blog">
                     <div class="titulo-blog">
-                        <h1>Lecturas de Natalia</h1>
-                        <p>Reseñas sobre libros que he leído</p>
+                        <h1>Sobre mí</h1>
+                        <p>Hola, soy Natalia Güemez. </p>
                     </div>
 
                     <div class="redes-sociales">
@@ -52,18 +51,10 @@
     <main class="contenedor-principal">
         <div class="contenido">
             <article>
-                <img src="assets/img/libro1.png" alt="La habitación al fondo de la casa">
                 <div class="contenido__descripcion">
-                    <h2>La habitación al fondo de la casa</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel tortor ex. Pellentesque ultrices orci urna, quis commodo velit condimentum id. Mauris hendrerit nibh accumsan, commodo augue in, tincidunt lacus. Praesent et fringilla urna. Aliquam at pretium sapien. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras lobortis, elit ac convallis porttitor, metus ligula porta ex, vel imperdiet ante urna in sapien. Duis erat augue, suscipit quis nulla sed, auctor commodo massa. Duis auctor nisl mauris, sit amet laoreet eros ullamcorper et. Nam eleifend convallis mauris eu sodales. Pellentesque sagittis erat vel mauris vulputate, sed ultrices tellus pretium. Curabitur dictum elementum laoreet. Sed eget venenatis urna. Nullam lacinia fermentum lacinia. Etiam a posuere nunc, nec fermentum quam. Sed ultricies risus ut enim consequat tempor.</p>
-                </div>
-            </article>
-
-            <article>
-                <img src="assets/img/libro2.png" alt="La habitación al fondo de la casa">
-                <div class="contenido__descripcion">
-                    <h2>Mi amor de wattpad</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel tortor ex. Pellentesque ultrices orci urna, quis commodo velit condimentum id. Mauris hendrerit nibh accumsan, commodo augue in, tincidunt lacus. Praesent et fringilla urna. Aliquam at pretium sapien. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras lobortis, elit ac convallis porttitor, metus ligula porta ex, vel imperdiet ante urna in sapien. Duis erat augue, suscipit quis nulla sed, auctor commodo massa. Duis auctor nisl mauris, sit amet laoreet eros ullamcorper et. Nam eleifend convallis mauris eu sodales. Pellentesque sagittis erat vel mauris vulputate, sed ultrices tellus pretium. Curabitur dictum elementum laoreet. Sed eget venenatis urna. Nullam lacinia fermentum lacinia. Etiam a posuere nunc, nec fermentum quam. Sed ultricies risus ut enim consequat tempor.</p>
+                    <h2>Un poco sobre mí</h2>
+                    <p>Soy una apasionada de la lectura y me encanta compartir mis opiniones sobre los libros que leo. En este blog encontrarás reseñas detalladas, reflexiones personales sobre una variedad de géneros literarios. Mi objetivo es crear una comunidad de lectores donde podamos intercambiar ideas y descubrir nuevas lecturas juntos. ¡Espero que disfrutes de mis reseñas y te animes a dejar tus comentarios!</p>
+                    <br><p>Si tienes alguna pregunta o sugerencia, no dudes en contactarme a través de las redes sociales en el blog. ¡Me encantaría saber de ti!</p>
                 </div>
             </article>
         </div>
@@ -71,9 +62,7 @@
         <aside class="sidebar">
             <div class="acerca">
                 <h3 class="acerca__titulo acerca__titulo--color" >Sobre mi</h3>
-                <a href="acerca.html">
-                    <img src="assets/img/foto-perfil.jpg" alt="Foto de Natalia" class="foto-perfil">
-                </a>
+                <img src="assets/img/foto-perfil.jpg" alt="Foto de Natalia" class="foto-perfil">
                 <p class="acerca__nombre acerca__nombre--color"><strong>Natalia Güemez</strong></p>
                 <p>Instagram principal 
                     <a href="https://www.instagram.com/nattpuffs/" target="_blank">@nattpuffs</a>
