--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
     <main class="contenedor-principal">
         <div class="contenido">
             <article>
-                <img src="assets/img/libro1.png" alt="La habitación al fondo de la casa">
+                <img src="assets/img/libro1..png" alt="La habitación al fondo de la casa">
                 <div class="contenido__descripcion">
                     <h2>La habitación al fondo de la casa</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel tortor ex. Pellentesque ultrices orci urna, quis commodo velit condimentum id. Mauris hendrerit nibh accumsan, commodo augue in, tincidunt lacus. Praesent et fringilla urna. Aliquam at pretium sapien. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras lobortis, elit ac convallis porttitor, metus ligula porta ex, vel imperdiet ante urna in sapien. Duis erat augue, suscipit quis nulla sed, auctor commodo massa. Duis auctor nisl mauris, sit amet laoreet eros ullamcorper et. Nam eleifend convallis mauris eu sodales. Pellentesque sagittis erat vel mauris vulputate, sed ultrices tellus pretium. Curabitur dictum elementum laoreet. Sed eget venenatis urna. Nullam lacinia fermentum lacinia. Etiam a posuere nunc, nec fermentum quam. Sed ultricies risus ut enim consequat tempor.</p>
+                    <p>Un relato inquietante donde los secretos familiares se mezclan con el terror psicológico. Ideal si buscas misterio y tensión constante.</p>
                 </div>
             </article>
 
@@ -63,14 +63,128 @@
                 <img src="assets/img/libro2.png" alt="La habitación al fondo de la casa">
                 <div class="contenido__descripcion">
                     <h2>Mi amor de wattpad</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel tortor ex. Pellentesque ultrices orci urna, quis commodo velit condimentum id. Mauris hendrerit nibh accumsan, commodo augue in, tincidunt lacus. Praesent et fringilla urna. Aliquam at pretium sapien. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras lobortis, elit ac convallis porttitor, metus ligula porta ex, vel imperdiet ante urna in sapien. Duis erat augue, suscipit quis nulla sed, auctor commodo massa. Duis auctor nisl mauris, sit amet laoreet eros ullamcorper et. Nam eleifend convallis mauris eu sodales. Pellentesque sagittis erat vel mauris vulputate, sed ultrices tellus pretium. Curabitur dictum elementum laoreet. Sed eget venenatis urna. Nullam lacinia fermentum lacinia. Etiam a posuere nunc, nec fermentum quam. Sed ultricies risus ut enim consequat tempor.</p>
+                    <p>Una historia juvenil fresca y romántica que retrata los altibajos del primer amor con un estilo cercano y entretenido.</p>
                 </div>
             </article>
+
+            <article>
+    <img src="assets/img/libro3.png" alt="El chico que entró por mi ventana">
+    <div class="contenido__descripcion">
+        <h2>El chico que entró por mi ventana</h2>
+        <p>Un relato que mezcla lo cotidiano con lo inesperado. La trama juega con la intriga y los sentimientos, mostrando cómo las relaciones pueden transformar la vida de los personajes.</p>
+    </div>
+</article>
+
+<article>
+    <img src="assets/img/libro4.png" alt="Bajo el mundo en un lugar mejor">
+    <div class="contenido__descripcion">
+        <h2>Hoy haré del mundo un lugar mejor</h2>
+        <p>Una reflexión sobre la esperanza y la búsqueda de un futuro distinto. Con un enfoque emotivo, invita a pensar en lo que realmente significa la felicidad.</p>
+    </div>
+</article>
+
+<article>
+    <img src="assets/img/libro5.png" alt="Desde el corazón siberiano">
+    <div class="contenido__descripcion">
+        <h2>Desde el corazón siberiano</h2>
+        <p>Una narración profunda que transporta al lector a escenarios fríos y lejanos, donde la fuerza interior y el espíritu humano se ponen a prueba.</p>
+    </div>
+</article>
+
+<article>
+    <img src="assets/img/libro6.png" alt="La corona">
+    <div class="contenido__descripcion">
+        <h2>La corona</h2>
+        <p>Parte de la saga “La Selección”, este libro sigue con la mezcla de romance y política, explorando las responsabilidades de quienes deben llevar una corona.</p>
+    </div>
+</article>
+
+<article>
+    <img src="assets/img/libro7.png" alt="La heredera">
+    <div class="contenido__descripcion">
+        <h2>La heredera</h2>
+        <p>Continuación de la saga, donde la protagonista debe enfrentarse al peso de las decisiones reales y al choque entre el deber y los sentimientos.</p>
+    </div>
+</article>
+
+<article>
+    <img src="assets/img/libro8.png" alt="La elegida">
+    <div class="contenido__descripcion">
+        <h2>La elegida</h2>
+        <p>Un cierre cargado de emociones donde la protagonista debe elegir entre el amor verdadero y las exigencias de su reino.</p>
+    </div>
+</article>
+
+<article>
+    <img src="assets/img/libro9.png" alt="La élite">
+    <div class="contenido__descripcion">
+        <h2>La élite</h2>
+        <p>La competencia se intensifica y el juego de poder revela los verdaderos rostros de las participantes. Una mezcla de glamour y tensión política.</p>
+    </div>
+</article>
+
+<article>
+    <img src="assets/img/libro10.png" alt="La selección">
+    <div class="contenido__descripcion">
+        <h2>La selección</h2>
+        <p>El inicio de la saga, donde se plantea un mundo distópico en el que el amor y la política se entrelazan en un concurso real.</p>
+    </div>
+</article>
+
+<article>
+    <img src="assets/img/libro11.png" alt="Hidden: chica de luz">
+    <div class="contenido__descripcion">
+        <h2>Hidden: chica de luz</h2>
+        <p>Un relato fantástico que explora lo oculto dentro de cada persona. La protagonista debe aceptar su verdadera naturaleza para sobrevivir.</p>
+    </div>
+</article>
+
+<article>
+    <img src="assets/img/libro12.png" alt="Vanish: chica de niebla">
+    <div class="contenido__descripcion">
+        <h2>Vanish: chica de niebla</h2>
+        <p>Secuela de “Hidden”, donde la magia y el misterio se profundizan, obligando a la protagonista a enfrentarse a sacrificios inesperados.</p>
+    </div>
+</article>
+
+<article>
+    <img src="assets/img/libro13.png" alt="El alienista">
+    <div class="contenido__descripcion">
+        <h2>El alienista</h2>
+        <p>Un thriller histórico ambientado en Nueva York. Con una investigación innovadora para su época, introduce al lector en el nacimiento de la criminología moderna.</p>
+    </div>
+</article>
+
+<article>
+    <img src="assets/img/libro14.png" alt="El psicoanalista">
+    <div class="contenido__descripcion">
+        <h2>El psicoanalista</h2>
+        <p>Un thriller psicológico donde la mente del protagonista se convierte en su peor enemigo. Una novela intensa y atrapante.</p>
+    </div>
+</article>
+
+<article>
+    <img src="assets/img/libro15.png" alt="Jaque al psicoanalista">
+    <div class="contenido__descripcion">
+        <h2>Jaque al psicoanalista</h2>
+        <p>Secuela del famoso thriller, donde el protagonista vuelve a ser perseguido y debe enfrentarse nuevamente a un juego mortal.</p>
+    </div>
+</article>
+
+<article>
+    <img src="assets/img/libro20.png" alt="A flor de piel">
+    <div class="contenido__descripcion">
+        <h2>A flor de pie </h2>
+        <p>Una historia emotiva que profundiza en los sentimientos más intensos de los personajes. Una novela cargada de pasión y vulnerabilidad.</p>
+    </div>
+</article>
+
+
         </div>
         
         <aside class="sidebar">
             <div class="acerca">
-                <h3 class="acerca__titulo acerca__titulo--color" >Sobre mi</h3>
+                <h3 class="acerca__titulo acerca__titulo--color">Sobre mi</h3>
                 <a href="acerca.html">
                     <img src="assets/img/foto-perfil.jpg" alt="Foto de Natalia" class="foto-perfil">
                 </a>
@@ -78,6 +192,8 @@
                 <p>Instagram principal 
                     <a href="https://www.instagram.com/nattpuffs/" target="_blank">@nattpuffs</a>
                 </p>
+
+
             </div>
 
             <div class="playlist-fav">
