--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <img src="assets/img/libro6.png" alt="La corona">
     <div class="contenido__descripcion">
         <h2>La corona</h2>
-        <p>Parte de la saga “La Selección”, este libro sigue con la mezcla de romance y política, explorando las responsabilidades de quienes deben llevar una corona.</p>
+        <p>hola.</p>
     </div>
 </article>
 
