--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <article>
     <img src="assets/img/libro20.png" alt="A flor de piel">
     <div class="contenido__descripcion">
-        <h2>A flor de pie </h2>
+        <h2>A flor de piel </h2>
         <p>Una historia emotiva que profundiza en los sentimientos más intensos de los personajes. Una novela cargada de pasión y vulnerabilidad.</p>
     </div>
 </article>
